--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <head>
-<title>CAT Residency</title>
+  <title>CAT Residency</title>
+  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
-<body>
+<body font-family: 'Poppins', sans-serif;>
+  CAT Residency
+  <br />
+  <p>CAT Residency is a residency program open to anyone. To participate:<br />
+   
 </body>
