--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
 <body font-family: 'Poppins', sans-serif;>
-  CAT Residency
+  <h1>CAT Residency</h1>
   <br />
   <p>CAT Residency is a residency program open to anyone. To participate:<br />
    
