--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 <body font-family: 'Poppins', sans-serif;>
   <h1>CAT Residency</h1>
   <br />
-  <p>CAT Residency is a residency program open to anyone. To participate:<br />
+  CAT Residency is a residency program open to anyone. To participate:<br />
+  <ol>
+    <li>Identify an amenable household in need of a house, cat, or other pet sitter.</li>
+    <li>Locate a friendly individual who will sublet your current home during the length of the residency (if applicable).</li>
+    <li>Make arrangements.</li>
+    <li>Move in to the appointed CAT Residency, and use this time and space as you like.</li>
+  </ol>
+  <br />
+  <p>For inquiries and advice, contact <a href="mailto:catresidency@gmail.com">CATResidency@gmail.com</a>.
    
 </body>
