--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>CAT Residency</title>
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
-<body font-family: 'Poppins', sans-serif;>
+<body max-width:40px; font-family: 'Poppins', sans-serif;>
   <h1>CAT Residency</h1>
   <br />
   CAT Residency is a residency program open to anyone. To participate:<br />
