--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <head>
   <title>CAT Residency</title>
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+  <style type="text/css">
+body {
+  width: 800px;
+  font-family: 'Poppins', sans-serif;
+    }
+div {
+  width: 40px;
+    }
+</style>
 </head>
-<body max-width:40px; font-family: 'Poppins', sans-serif;>
+<body>
   <h1>CAT Residency</h1>
   <br />
   CAT Residency is a residency program open to anyone. To participate:<br />
