--- a/index.html
+++ b/index.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <head>
   <title>CAT Residency</title>
-  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Muli|Poppins:300,400,600" rel="stylesheet">
   <style type="text/css">
 body {
   width: 800px;
-  margin: 30px;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Muli', sans-serif;
+  font-size: 14px;
     }
 div {
-  width: 40px;
+  width: 550px;
+  margin-top: 10px;
+  margin-left:40px;
     }
+h1 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600px;
+  font-size: 32px;
+  padding-bottom: -10px;
+}
+/*p {
+  font-style: italic;
+}*/
+
 </style>
 </head>
 <body>
+<div>
   <h1>CAT Residency</h1>
-  <br />
-  CAT Residency is a residency program open to anyone. To participate:<br />
+  <p>CAT Residency is a residency program open to anyone.<br>To participate:</p>
   <ol>
-    <li>Identify an amenable household in need of a house, cat, or other pet sitter.</li>
-    <li>Locate a friendly individual who will sublet your current home during the length of the residency (if applicable).</li>
-    <li>Make arrangements.</li>
-    <li>Move in to the appointed CAT Residency, and use this time and space as you like.</li>
-  </ol>
-  <br />
-  <p>For inquiries and advice, contact <a href="mailto:catresidency@gmail.com">CATResidency@gmail.com</a>.
-   
+    <li>Identify an amenable household in need of a house,<br> cat, or other pet sitter.</li><br>
+    <li>Locate a friendly individual who will sublet your current <br>home during the length of the residency (if applicable).</li><br>
+    <li>Make arrangements.</li><br>
+    <li>Move in to the appointed CAT Residency, and use this<br> time and space as you like.</li>
+  </ol><br>
+  <p>For inquiries or advice, contact <a href="mailto:catresidency@gmail.com">CATResidency@gmail.com</a>.
+</div>  
 </body>
