--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ h1 {
 <body>
 <div>
   <h1>CAT Residency</h1>
-  <p>CAT Residency is a residency program open to anyone.<br>To participate:</p>
+  <p>CAT Residency is a residency program open to anyone.<br>To participate:</p><br>
   <ol>
     <li>Identify an amenable household in need of a house,<br> cat, or other pet sitter.</li><br>
     <li>Locate a friendly individual who will sublet your current <br>home during the length of the residency (if applicable).</li><br>
