--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>CAT Residency</title>
   <link href="https://fonts.googleapis.com/css?family=Muli|Poppins:300,400,600" rel="stylesheet">
-  <link rel="icon" type="image/png" href="http://CatFav.png">
+  <link rel="icon" type="image/png" href="CatFav.png">
   <style type="text/css">
 body {
   width: 800px;
