--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@ h1 {
     <li>Make arrangements.</li><br>
     <li>Move in to the appointed CAT Residency, and use this<br> time and space as you like.</li>
   </ol><br>
-  <p>For inquiries or advice, contact <a href="mailto:catresidency@gmail.com">CATResidency@gmail.com</a>.
+  <p>For inquiries, feedback or advice, contact <a href="mailto:catresidency@gmail.com">CATResidency@gmail.com</a>.
 </div>  
 </body>
