--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body {
   font-size: 14px;
     }
 div {
-  width: 550px;
+  width: 410px;
   margin-top: 10px;
   margin-left:40px;
     }
@@ -32,10 +32,10 @@ h1 {
   <p>CAT Residency is an open source artist residency program.</p>
   <p>To participate:</p>
   <ol>
-    <li>Identify an amenable household in need of a house,<br> cat, or other pet sitter.</li><br>
-    <li>Locate a friendly individual who will sublet your current <br>home during the length of the residency (if applicable).</li><br>
+    <li>Identify an amenable household in need of a house, cat, or other pet sitter.</li><br>
+    <li>Locate a friendly individual who will sublet your current home during the length of the residency (if applicable).</li><br>
     <li>Make arrangements.</li><br>
-    <li>Move in to the appointed CAT Residency, and use this<br> time and space as you like.</li>
+    <li>Move in to the appointed CAT Residency, and use this time and space as you like.</li>
   </ol><br>
   <p>For more information contact <a href="mailto:catresidency@gmail.com">CATResidency@gmail.com</a>.
 </div>  
