--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ h1 {
 <body>
 <div>
   <h1>CAT Residency</h1>
-  <p>CAT Residency is an open source artist residency program.</p>
+  <p>CAT Residency is an open source artist residency program.</p><br>
   <p>To participate:</p>
   <ol>
     <li>Identify an amenable household in need of a house, cat, or other pet sitter.</li><br>
