--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ h1 {
 <body>
 <div>
   <h1>CAT Residency</h1>
-  <p>CAT Residency is an open source artist residency program.</p><br>
-  <p>To participate:</p>
+  <p>CAT Residency is an open source artist residency program.<br>
+  <br>To participate:</p>
   <ol>
     <li>Identify an amenable household in need of a house, cat, or other pet sitter.</li><br>
     <li>Locate a friendly individual who will sublet your current home during the length of the residency (if applicable).</li><br>
