--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body {
     }
 div {
   width: 410px;
-  margin-top: 10px;
+  padding-top: 2px;
   margin-left:40px;
     }
 h1 {
@@ -20,10 +20,6 @@ h1 {
   font-size: 32px;
   padding-bottom: -10px;
 }
-/*p {
-  font-style: italic;
-}*/
-
 </style>
 </head>
 <body>
