--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
   <title>CAT Residency</title>
   <link href="https://fonts.googleapis.com/css?family=Muli|Poppins:300,400,600" rel="stylesheet">
-  <link rel="icon" href="/CatFav.ico" type="image/x-icon">    
-  <link rel="shortcut icon" href="/CatFav.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">    
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <style type="text/css">
 body {
   width: 800px;
