--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@ h1 {
     <li>Make arrangements.</li><br>
     <li>Move in to the appointed CAT Residency, and use this time and space as you like.</li>
   </ol><br>
-  <p>For more information contact <a href="mailto:catresidency@gmail.com">CATResidency@gmail.com</a>.
+  <p>For more information, contact <a href="mailto:catresidency@gmail.com">CATResidency@gmail.com</a>.
 </div>  
 </body>
